--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/",
-    "deploy": "git subtree push --prefix dist origin gh-pages"
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "aos": "^2.3.4",
